snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__bin__fstsymbols-main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/bin/fstsymbols-main.cc",
    ),
    start_line: 1,
    end_line: 111,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 4,
            exit_sum: 4,
            total_space_functions: 0,
            exit_min: 4,
            exit_max: 4,
        },
        cognitive: Stats {
            structural: 19,
            structural_sum: 19,
            structural_min: 19,
            structural_max: 19,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 18.0,
            cyclomatic: 18.0,
            n: 1,
            cyclomatic_max: 18.0,
            cyclomatic_min: 18.0,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 285,
            u_operands: 82,
            operands: 197,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 111,
                unit: true,
                sloc_min: 111,
                sloc_max: 111,
            },
            ploc: Ploc {
                lines: {
                    61,
                    55,
                    49,
                    110,
                    43,
                    104,
                    37,
                    98,
                    31,
                    92,
                    25,
                    86,
                    19,
                    80,
                    13,
                    74,
                    68,
                    62,
                    56,
                    44,
                    105,
                    38,
                    99,
                    32,
                    93,
                    26,
                    87,
                    20,
                    81,
                    14,
                    8,
                    69,
                    57,
                    51,
                    45,
                    39,
                    100,
                    33,
                    94,
                    88,
                    21,
                    82,
                    15,
                    76,
                    9,
                    70,
                    64,
                    58,
                    52,
                    46,
                    107,
                    101,
                    95,
                    28,
                    89,
                    22,
                    83,
                    77,
                    10,
                    71,
                    65,
                    59,
                    41,
                    102,
                    35,
                    96,
                    29,
                    23,
                    84,
                    17,
                    78,
                    72,
                    66,
                    60,
                    54,
                    48,
                    109,
                    42,
                    103,
                    36,
                    97,
                    30,
                    91,
                    24,
                    85,
                    18,
                    79,
                    12,
                    6,
                    67,
                },
                ploc_min: 90,
                ploc_max: 90,
            },
            cloc: Cloc {
                only_comment_lines: 5,
                code_comment_lines: 0,
                comment_line_end: Some(
                    4,
                ),
                cloc_min: 5,
                cloc_max: 5,
            },
            lloc: Lloc {
                logical_lines: 60,
                lloc_min: 60,
                lloc_max: 60,
            },
            space_count: 1,
            blank_min: 16,
            blank_max: 16,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 482.0,
            halstead_vocabulary: 106.0,
            halstead_volume: 3242.8576590994617,
            cyclomatic: 18.0,
            sloc: 111.0,
            comments_percentage: 0.04504504504504504,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
